Fix soundboard overflow - double scroll bug

--- a/src/components/Soundboard/Soundboard.scss
+++ b/src/components/Soundboard/Soundboard.scss
@@ -45,8 +45,7 @@ body.light {
     gap: 1rem;
     padding: 1rem;
     width: auto;
-    height: 100%;
-    overflow-y: scroll;
+    height: auto;
 
     .loading {
         display: flex;
